iac/stock-debate-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-debate-ingress
  # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/rewrite/README.md
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            # annotation rewrite-target will remove /authentication... when redirecting to
            # internal service (which causes path mismatching and swagger/requests not working)
            path: /authentication(/|$)(.*)
            backend:
              service:
                name: authentication-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /stock-debate-api(/|$)(.*)
            backend:
              service:
                name: stock-debate-api-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /stock(/|$)(.*)
            backend:
              service:
                name: stock-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /discussion(/|$)(.*)
            backend:
              service:
                name: discussion-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /community(/|$)(.*)
            backend:
              service:
                name: community-service
                port:
                  number: 8080
